# ngfs-scenario-explorer

./: .gitignore  README.md  pyproject.toml
app/: app.py
data/sample/: sample_portfolio.csv
src/ngfs/: __init__.py  damage_functions.py  iiasa_client.py  portfolio.py  scenario_engine.py  visualization.py
tests/: test_damage_functions.py  test_portfolio.py  test_scenario_engine.py
