[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ngfs-scenario-explorer"
version = "0.1.0"
description = "Climate finance tool: overlay NGFS Phase V scenarios on portfolios with toggleable damage functions"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "requests>=2.31",
    "pandas>=2.1",
    "numpy>=1.25",
    "pyarrow>=14.0",
    "streamlit>=1.30",
    "plotly>=5.18",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
